--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div class="list">
 		<ul>
         	<div id="close"> &#10782&#10782 </div>
-            <h4><a href="www.branchfrost.com">Home</a></h4>
-            <h4><a href="www.branchfrost.com/blog">Blog</a></h4>
-            <h4><a href="www.branchfrost.com/projects">Projects</a></h4>
-            <h4><a href="#">Contact</a></h4>
+            <h5><a href="#section1">Home</a></h5>
+            <h5><a href="/blog">Blog</a></h5>
+            <h5><a href="/projects">Projects</a></h5>
+            <h5><a href="#section2">Contact</a></h5>
         </ul>
 	</div>
 </div>
@@ -27,7 +27,7 @@
 			Today is the Day
 	</div>
 	<div class="down">
-		&#9663
+		&#8595
 	</div>
 </div>
 
@@ -37,7 +37,7 @@
 			<a href="https://www.github.com/jtensor">
 				<div id="box1"></div>
 			</a>
-			<a href="https://www.linkedin.com/profile/view?id=353003358">
+			<a href="https://www.linkedin.com/pub/jamie-titensor/9a/278/426/">
 				<div id="box2"></div>
 			</a>
 		</div>
@@ -53,7 +53,26 @@
 </div>
 
 <div id="section3">
-	
+	<div id="nonsense">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
 </div>
 
 
